Update disabled button style

--- a/popup.html
+++ b/popup.html
@@ -54,7 +54,8 @@
         }
 
         button:disabled {
-            background-color: #6B7280;
+            background-color: #c3c4c5;
+            border-color: #62676d;
             cursor: not-allowed;
         }
     </style>
@@ -65,7 +66,7 @@
     <div id="current-domain"></div>
     <button id="on-off-toggle">Toggle On/Off</button>
     <button id="optionsButton">Go to Options</button>
-    <button id="wikiButton" disabled>Open CAT Wiki Article</button>
+    <button id="wikiButton" disabled>Page not on CAT Wiki</button>
 
     <script type="module" src="constants.js"></script>
     <script type="module" src="utils.js"></script>
